# SoftBox

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  TestAreaLight.nk  UsdAreaLightOp.cpp  UsdAreaLightOp.h  menu.py
LINUX/: CMakeLists_LINUX.txt
MAC/: CMakeLists_MAC.txt
MAC/16.1v1/: AreaLight.dylib
MAC/17.0v1/: AreaLight.dylib
src/: UsdAreaLightOp.h
